# UDB-Backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  app.db  config.toml  diesel.toml  docker-run.sh  words.txt
actix-web-jwt-middleware/: Cargo.toml
actix-web-jwt-middleware/src/: lib.rs  middleware.rs
actix-web-jwt-middleware/test/: Cargo.toml
actix-web-jwt-middleware/test/src/: main.rs
migrations/2019-07-08-122006_initial/: down.sql  up.sql
migrations/2019-07-15-210607_no_blob_subtask/: down.sql  up.sql
migrations/2019-07-21-161950_per-task-db/: down.sql  up.sql
migrations/2019-07-22-100643_n-to-m-associations/: down.sql  up.sql
migrations/2019-08-01-145452_allowed-sql/: down.sql  up.sql
migrations/2019-08-02-142142_alias/: down.sql  up.sql
migrations/2019-08-26-212855_task-names/: down.sql
migrations/2019-08-28-134622_task-db-id-null/: down.sql  up.sql
migrations/2019-09-03-220841_database_name_not_unique/: down.sql  up.sql
migrations/postgres/2019-08-13-220442_initial/: up.sql
migrations/postgres/2019-08-26-212855_task-names/: down.sql  up.sql
migrations/postgres/2019-08-28-134622_task-db-id-null/: down.sql
migrations/postgres/2019-09-03-170659_database_name_not_unique/: down.sql  up.sql
migrations/sqlite/2019-09-03-170208_initial/: down.sql  up.sql
src/: alias_generator.rs  cli.rs  database.rs  logging.rs  main.rs  schema.rs  settings.rs  solution_compare.rs  util.rs
src/handlers/: account.rs  alias.rs  courses.rs  databases.rs  mod.rs  subtasks.rs  tasks.rs  worksheets.rs
src/middlewares/: auth_to_uuid.rs  db_connection.rs  mod.rs  ownership.rs  upload_filter.rs
src/models/: access.rs  account_creation.rs  account_update.rs  alias.rs  content.rs  course.rs  database.rs  mc_content.rs  mc_solution.rs  mod.rs  plaintext_solution.rs  solution.rs  sql_content.rs  sql_solution.rs  subtask.rs  task.rs  token.rs  user.rs  worksheet.rs
upowdb-cli/: Cargo.toml
upowdb-cli/src/: main.rs
upowdb-models/: Cargo.toml
upowdb-models/src/: schema.rs
upowdb-models/src/models/: access.rs  account.rs  alias.rs  content.rs  course.rs  mod.rs  solution.rs  subtask.rs  task.rs  token.rs  worksheet.rs
