[package]
name = "upowdb-backend"
version = "0.2.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>", "David Lamm <david-lamm@web.de>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
actix-cors = "0.1.0"
serde = { version = "1.0.98", features = ["derive"] }
clap = "2.33.0"
fern = "0.5.8"
log = "0.4.8"
actix-web-prom = "0.1.2"
config = "0.9.3"
chrono = "0.4.7"
actix = "0.8.3"
diesel = { version = "1.4.2", features = ["sqlite", "r2d2"] }
futures = "0.1.28"
serde_json = "1.0.40"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
actix-web-jwt-middleware = { path = "actix-web-jwt-middleware" }
rand = "0.7.0"
regex = "1.2.1"
lazy_static = "1.3.0"
argon2rs = "0.2.5"
frank_jwt = "3.1.1"
base64 = "0.10.1"
actix-web-httpauth = "0.3.2"
