[package]
name = "actix-web-jwt-middleware"
version = "0.1.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2018"

[dependencies]
futures = "0.1.28"
actix-web = "1.0.5"
frank_jwt = "3.1.1"
serde_json = "1.0.40"
regex = "1.2.1"
lazy_static = "1.3.0"
log = "0.4.8"
chrono = "0.4.7"
