[package]
name = "upowdb-models"
version = "0.1.0"
authors = ["Jan Christian Gr??nhage <jan.christian@gruenhage.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4.2"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
argon2rs = "0.2.5"
base64 = "0.10.1"
rand = "0.7.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
